Fixed the components div to overflow-y auto so scroll bar will appear in the element

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -138,4 +138,5 @@ body{
     background-color: var(--l1-color) !important;
     border-radius: var(--border-radius);
     height: 98vh;
+    overflow-y: auto;
 }
